--- a/8.1Artefacts.html
+++ b/8.1Artefacts.html
@@ -216,6 +216,21 @@
 											<p> </p>
 											<p> </p>
 										</section>
+													
+													<section id="nine">
+									<div class="inner">
+										<header class="major">
+											<h2>E-Portfolio Activity 4: Codes of Ethics</h2>
+										</header>
+										<details>
+                      <summary>A legal-ethical investigation of forensic evidence-gathering procedures in Germany.</summary>
+												<p> </p>
+												<b><a href="Artefacts/Principles_of_Digital_Forensics_and_Cyber_Law/Unit 12 e-portfolio activity_Codes of Ethics.pdf">E-Portfolio Activity 4: Codes of Ethics</a></b>
+											</details>
+											
+											<p> </p>
+											<p> </p>
+										</section>
 
 
 				<!-- Contact -->
