--- a/8.2Reflections.html
+++ b/8.2Reflections.html
@@ -225,10 +225,14 @@ When analyzing the ISO/IEC 27043 standard, it was noticed that the regulations t
                     
                      	<details>
 											<summary><b>Unit 12</b></summary>
-                        <p></p>
+                        <p>The module concluded with a consideration of ethics in cyberspace. Here, an in-depth consideration of the aspects from different positions was taken in order to be able to illuminate the complex of ethics in cyberspace.
+It was enlightening for me to see that different ethical constructs are used depending on the position involved in cyberspace. The authorities and the rule of law have principles and ethics that are self-imposed in order to adequately protect the rights of citizens within the framework of digital forensics and to act in an ethical manner. Such statutes of ethical principles in digital forensics are listed in Germany by the Federal Office for Information Security (BSI) (BSI, 2020). In addition, ethical expectations can also be applied to those who collect, use and store the personal data of others. Online companies play a prominent role here, especially in the context of identity theft. Due to data leaks, companies regularly lose personal information about their customers, which can affect millions of people due to the accumulation of data sets in a breach (Hasso Plattner Institute, N.D.). Numerous cases in which companies have tried to cover up data theft show that these ethical expectations of companies are not always met. However, ethical principles can also be found among hackers. An obvious example are white head hackers who use their skills to find and expose vulnerabilities to help keep the Internet safe. But even malicious hackers have ethical principles that, while not in line with societal expectations, exist. Hacktivism, which aims to draw attention to subjective injustice (Holt et al., 2022). could be cited as an example of this. It can therefore be concluded that it is important to consider the respective ethical positions in order to be able to understand the respective perspectives. But the importance of the ethical question in cyberspace and law enforcement is also important, as otherwise states could run the risk of violating their own rule of law, rights and principles.
+</p>
                         <b>References:</b>
 												<ul>
-                          <li></li>
+                          <li>BSI (2020) Orientierungshilfe zu Nachweisen gemäß § 8a Absatz 3 BSIG. Available from: https://www.bsi.bund.de/SharedDocs/Downloads/DE/BSI/KRITIS/oh-nachweise.pdf?__blob=publicationFile&v=8 [Accessed 25 October 2022].</li>
+													<li>Hasso-Plattner-Institut (N.D.) Erfasste veröffentlichte Leaks der letzten Monate. Available from: https://sec.hpi.de/ilc/statistics [Accessed 25 October 2022]. </li>
+													<li>Holt, T., Bossler, A. & Seigfried-Spellar, K. (2022) Cybercrime and Digital Forensics. Routedge, New York. Available from: https://essexonline.vitalsource.com/reader/books/9781000553406/epubcfi/6/52[%3Bvnd.vst.idref%3Dchapter16]!/4/2/2/2[chapter16]/6/1:0[%2C16 [Accessed 25 October 2022].</li>
 													</ul>
 										</details>
 										<p> </p>
