--- a/8.1Artefacts.html
+++ b/8.1Artefacts.html
@@ -205,7 +205,7 @@
 												<section id="eight">
 									<div class="inner">
 										<header class="major">
-											<h2>Assignment 2 - Blog Post</h2>
+											<h2>Assignment 2: Blog Post</h2>
 										</header>
 										<details>
                       <summary>A blog post that focuses on cyber-identify theft in Germany and the impact of international laws on national legislation.</summary>
@@ -231,6 +231,22 @@
 											<p> </p>
 											<p> </p>
 										</section>
+														
+														<section id="ten">
+									<div class="inner">
+										<header class="major">
+											<h2>Assignment 3: Expert Report</h2>
+										</header>
+										<details>
+                      <summary>In this expert report, the legal basis of identity theft, as well as the manifestation and consequences for victims and society in Germany, were examined in depth and the legal framework for criminal prosecution was evaluated.</summary>
+												<p> </p>
+												<b><a href="Artefacts/Principles_of_Digital_Forensics_and_Cyber_Law/PDFCYL_Expert Report_Michael Geiger.pdf">E-Portfolio Activity 4: Codes of Ethics</a></b>
+											</details>
+											
+											<p> </p>
+											<p> </p>
+										</section>
+
 
 
 				<!-- Contact -->
