--- a/8.1Artefacts.html
+++ b/8.1Artefacts.html
@@ -210,7 +210,7 @@
 										<details>
                       <summary>A blog post that focuses on cyber-identify theft in Germany and the impact of international laws on national legislation.</summary>
 												<p> </p>
-												<b><a href="Artefacts/Principles_of_Digital_Forensics_and_Cyber_Law/Blog Post PDFCYL_Michael Geiger.pdf">Blog Post</a></b>
+												<b><a href="Artefacts/Principles_of_Digital_Forensics_and_Cyber_Law/Blog Post PDFCYL_Michael Geiger.pdf">Blog post</a></b>
 											</details>
 											
 											<p> </p>
@@ -240,7 +240,7 @@
 										<details>
                       <summary>In this expert report, the legal basis of identity theft, as well as the manifestation and consequences for victims and society in Germany, were examined in depth and the legal framework for criminal prosecution was evaluated.</summary>
 												<p> </p>
-												<b><a href="Artefacts/Principles_of_Digital_Forensics_and_Cyber_Law/PDFCYL_Expert Report_Michael Geiger.pdf">E-Portfolio Activity 4: Codes of Ethics</a></b>
+												<b><a href="Artefacts/Principles_of_Digital_Forensics_and_Cyber_Law/PDFCYL_Expert Report_Michael Geiger.pdf">Expert Report</a></b>
 											</details>
 											
 											<p> </p>
