--- a/9Resarchmethodsandprofessionalpractice.html
+++ b/9Resarchmethodsandprofessionalpractice.html
@@ -64,7 +64,7 @@
 							</header>
 				
 							<div class="content">
-								<p>Work in progress</p>
+								<p>A thorough training of practical research methods, techniques and tools, as well as skills and insights of essential legal, social, ethical and professional issues applicable to computing projects.</p>
 							</div>
 						</div>
 					</section>
@@ -88,12 +88,12 @@
 									</header>
 									<p>
 										<ul>
-										  <li><p>
-											<li><p>
-											<li><p>
-											<li>
+										  <li>Appraise the professional, legal, social, cultural and ethical issues that affect computing professionals.</li>
+											<li>Appraise the principles of academic investigation, applying them to a research topic in the applicable computing field.</li>
+											<li>Evaluate critically existing literature, research design and methodology for the chosen topic, including data analysis processes.</li>
+											<li>Produce and evaluate critically a research proposal for the chosen topic.</li>
 									</ul>
-</p>
+<p> </p>
 								</div>
 							</section>
 
