--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="9Resarchmethodsandprofessionalpractice.html" class="link">Research Methods and Professional Practice</a></h3>
-										<p>Work in Progress</p>
+										<p>A thorough training of practical research methods, techniques and tools, as well as skills and insights of essential legal, social, ethical and professional issues applicable to computing projects.</p>
 										
 											</header>
 								</article>
