--- a/9.3Notes.html
+++ b/9.3Notes.html
@@ -75,12 +75,12 @@
 											<h2>Meeting Notes and Preparations</h2>
 										</header>
 											<b>Seminar 1 - Introduction</b>
-											<a href="Notes/">Notes</a> 
+											<a href="Notes/Research_Methods_and_Professional_Practice/1_Seminar.pdf">Notes</a> 
 											<p> </p>
 											
 											<b>Seminar 2 - Peer review Activity</b>
- 										<a href="Notes/">Notes</a><nobr> and </nobr>
-                    <a href="Notes/">Preparation</a>
+ 										<a href="Notes/Research_Methods_and_Professional_Practice/2_Seminar.pdf">Notes</a><nobr> and </nobr>
+                    <a href="Notes/Research_Methods_and_Professional_Practice/2_Seminar Preparation.pdf">Preparation</a>
 											<p> </p>
 											
 										<b>Seminar 3 - Case Study: Privacy</b>
