--- a/9.1Artefacts.html
+++ b/9.1Artefacts.html
@@ -105,7 +105,7 @@
 											<p> </p>
 										</section>
 										
-											section id="three">
+											<section id="three">
 									<div class="inner">
 										<header class="major">
 											<h2>Literature Review and Reserach Proposal Outlines</h2>
@@ -120,7 +120,7 @@
 											<p> </p>
 										</section>
 										
-												section id="four">
+												<section id="four">
 									<div class="inner">
 										<header class="major">
 											<h2>Reserach Proposal Review</h2>
