--- a/9.3Notes.html
+++ b/9.3Notes.html
@@ -84,7 +84,8 @@
 											<p> </p>
 											
 										<b>Seminar 3 - Case Study: Privacy</b>
- 										<a href="Notes/">Notes</a>
+ 										<a href="Notes/">Notes</a><nobr> and </nobr>
+                    <a href="Notes/">Preparation</a>
 											<p> </p>
                     
                     <b>Seminar 4 - Inferential Statisitcs Workshop</b>
@@ -114,7 +115,7 @@
 										<header class="major">
 											<h2>Feedback</h2>
 											<p> </p>
-										<b>	<a href="Notes/">Work in Progess</a> </b>
+										<b>	<a href="Notes/Research_Methods_and_Professional_Practice/Feedback - Collaborative Discussion 1.pdf">Collaborative Discussion 1</a> </b>
 											<p> </p>
 											<p> </p>
 									<b>	<a href="Notes/">Work in Progress</a> </b>
