--- a/9.3Notes.html
+++ b/9.3Notes.html
@@ -84,8 +84,8 @@
 											<p> </p>
 											
 										<b>Seminar 3 - Case Study: Privacy</b>
- 										<a href="Notes/">Notes</a><nobr> and </nobr>
-                    <a href="Notes/">Preparation</a>
+ 										<a href="Notes/Research_Methods_and_Professional_Practice/3_Seminar.pdf">Notes</a><nobr> and </nobr>
+                    <a href="Notes/Research_Methods_and_Professional_Practice/3_Seminar Preparation.pdf">Preparation</a>
 											<p> </p>
                     
                     <b>Seminar 4 - Inferential Statisitcs Workshop</b>
