--- a/9.1Artefacts.html
+++ b/9.1Artefacts.html
@@ -77,7 +77,7 @@
 											<h2>Reflective activity: Ethics in Computing</h2>
 										</header>
 										<details>
-                      <summary>In this reflection, ethical aspects in computing were analyzed. The importance of ethical behavior in a scientific and professional context was highlighted and personal consequences were discussed on the basis of case studies.</summary>
+                      <summary>In this reflection, ethical aspects in computing were analyzed. The importance of ethical behaviour in a scientific and professional context was highlighted and personal consequences were discussed on the basis of case studies.</summary>
 												<p> </p>
 												<b><a href="Artefacts/Reserach_Methods_and_Professional_Practice/Unit 1_Reflective activity - Ehics in Computing.pdf">Reflection: Ethics in Computing</a></b>
 										</details>
@@ -114,7 +114,7 @@
 											<section id="three">
 									<div class="inner">
 										<header class="major">
-											<h2>E-Portfolio Activity: Literature Review and Reserach Proposal Outlines</h2>
+											<h2>E-Portfolio Activity: Literature Review and Research Proposal Outlines</h2>
 										</header>
 										<details>
                       <summary>A first outline of the planned literature review and initial considerations for the research proposal were carried out.</summary>
@@ -135,12 +135,12 @@
 												<section id="four">
 									<div class="inner">
 										<header class="major">
-											<h2>E-Portfolio Activity: Reserach Proposal Review</h2>
+											<h2>E-Portfolio Activity: Research Proposal Review</h2>
 										</header>
 										<details>
                       <summary>Ideas for designing the research proposal were considered and justified.</summary>
 												<p> </p>
-												<b><a href="Artefacts/Reserach_Methods_and_Professional_Practice/Unit 3_Reserach Proposal Review.pdf">Reserach Proposal Review</a></b>
+												<b><a href="Artefacts/Reserach_Methods_and_Professional_Practice/Unit 3_Reserach Proposal Review.pdf">Research Proposal Review</a></b>
 										</details>
 											
 											<p> </p>
