--- a/9.1Artefacts.html
+++ b/9.1Artefacts.html
@@ -92,7 +92,7 @@
 											<h2>Collaborative Learning Discussion 1</h2>
 										</header>
 										<details>
-                      <summary>Based on case studies from the Association of Comuting Machinery (ACM), ethical misconduct was examined and compared to the Code of Conduct of the British Computer Society (BCS). An understanding of the complexity of ethics in practical situations was created.</summary>
+                      <summary>Based on case studies from the Association of Computing Machinery (ACM), ethical misconduct was examined and compared to the Code of Conduct of the British Computer Society (BCS). An understanding of the complexity of ethics in practical situations was created.</summary>
 												<p> </p>
 												<b><a href="Artefacts/Reserach_Methods_and_Professional_Practice/Collaborative_Discussion_1/Initial Post_Michael Geiger.pdf">Initial Post</a></b>
 											<p> </p>
