--- a/9.1Artefacts.html
+++ b/9.1Artefacts.html
@@ -250,8 +250,8 @@
 										<details>
                       <summary>Exercises for evaluating research data using spreadsheet programs.</summary>
 												<p> </p>
-												<b><a href="Artefacts/Reserach_Methods_and_Professional_Practice/">Two-Tailed Test (PDF)</a></b><p>, </p>
-											<b><a href="Artefacts/Reserach_Methods_and_Professional_Practice/">Two-Tailed Test (XLSX)</a></b>
+												<b>Two-Tailed Test: <b><a href="Artefacts/Reserach_Methods_and_Professional_Practice/">PDF</a></b><p>, </p>
+											<b><a href="Artefacts/Reserach_Methods_and_Professional_Practice/">XLSX</a></b>
 										</details>
 											
 											<p> </p>
