--- a/9.1Artefacts.html
+++ b/9.1Artefacts.html
@@ -245,12 +245,12 @@
 																			<section id="ten">
 									<div class="inner">
 										<header class="major">
-											<h2>Summary Measures and Hypothesis Testing/h2>
+											<h2>Summary Measures and Hypothesis Testing</h2>
 										</header>
 										<details>
                       <summary>Exercises for evaluating research data using spreadsheet programs.</summary>
 												<p> </p>
-												<b>Two-Tailed Test: <b><a href="Artefacts/Reserach_Methods_and_Professional_Practice/">PDF</a></b><p>, </p>
+												<b>Two-Tailed Test: <b><a href="Artefacts/Reserach_Methods_and_Professional_Practice/">PDF</a></b><nobr>, </nobr>
 											<b><a href="Artefacts/Reserach_Methods_and_Professional_Practice/">XLSX</a></b>
 										</details>
 											
