--- a/9.1Artefacts.html
+++ b/9.1Artefacts.html
@@ -277,7 +277,7 @@
 																<section id="eleven">
 									<div class="inner">
 										<header class="major">
-											<h2>Data Analysis Worksheets</p>
+											<h2>Data Analysis Worksheets</h2>
 										</header>
 										<details>
                       <summary>Exercises for analysing research data using spreadsheet programs.</summary>
