--- a/9.1Artefacts.html
+++ b/9.1Artefacts.html
@@ -250,23 +250,20 @@
 										<details>
                       <summary>Exercises for evaluating research data using spreadsheet programs.</summary>
 												<p> </p>
-												<b>Two-Tailed Test: <b><a href="Artefacts/Reserach_Methods_and_Professional_Practice/">PDF</a></b><nobr>, </nobr>
-											<b><a href="Artefacts/Reserach_Methods_and_Professional_Practice/">XLSX</a></b>
+												<b>Two-Tailed Test and One-Tailed Test: <b><a href="Artefacts/Reserach_Methods_and_Professional_Practice/Worksheets/Exe 8.4G.pdf">PDF</a></b><nobr>, </nobr>
+											<b><a href="Artefacts/Reserach_Methods_and_Professional_Practice/Worksheets/Exe 8.4G.xlsx">XLSX</a></b>
 														<p> </p>
-												<b>One-Tailed Test: <b><a href="Artefacts/Reserach_Methods_and_Professional_Practice/">PDF</a></b><nobr>, </nobr>
-											<b><a href="Artefacts/Reserach_Methods_and_Professional_Practice/">XLSX</a></b>
-														<p> </p>
-												<b>Independent Sample T Test: <b><a href="Artefacts/Reserach_Methods_and_Professional_Practice/">PDF</a></b><nobr>, </nobr>
-											<b><a href="Artefacts/Reserach_Methods_and_Professional_Practice/">XLSX</a></b>
+												<b>Independent Sample T Test: <b><a href="Artefacts/Reserach_Methods_and_Professional_Practice/Worksheets/Exe 8.6C.pdf">PDF</a></b><nobr>, </nobr>
+											<b><a href="Artefacts/Reserach_Methods_and_Professional_Practice/Worksheets/Exe 8.6C.xlsx">XLSX</a></b>
 													<p> </p>
-														<b>Sample size, mean & standard deviation: <b><a href="Artefacts/Reserach_Methods_and_Professional_Practice/">PDF</a></b><nobr>, </nobr>
-											<b><a href="Artefacts/Reserach_Methods_and_Professional_Practice/">XLSX</a></b>
+														<b>Sample size, mean & standard deviation: <b><a href="Artefacts/Reserach_Methods_and_Professional_Practice/Worksheets/Exe 8.1B.pdf">PDF</a></b><nobr>, </nobr>
+											<b><a href="Artefacts/Reserach_Methods_and_Professional_Practice/Exe 8.1B.xlsx">XLSX</a></b>
 															<p> </p>
-															<b>Sample median, quartiles & interquartile range: <b><a href="Artefacts/Reserach_Methods_and_Professional_Practice/">PDF</a></b><nobr>, </nobr>
-											<b><a href="Artefacts/Reserach_Methods_and_Professional_Practice/">XLSX</a></b>
+															<b>Sample median, quartiles & interquartile range: <b><a href="Artefacts/Reserach_Methods_and_Professional_Practice/Worksheets/Exe 8.2B.pdf">PDF</a></b><nobr>, </nobr>
+											<b><a href="Artefacts/Reserach_Methods_and_Professional_Practice/Worksheets/Exe 8.2B.xlsx">XLSX</a></b>
 															<p> </p>
-																<b>Frequencies and percentage frequencies: <b><a href="Artefacts/Reserach_Methods_and_Professional_Practice/">PDF</a></b><nobr>, </nobr>
-											<b><a href="Artefacts/Reserach_Methods_and_Professional_Practice/">XLSX</a></b>
+																<b>Frequencies and percentage frequencies: <b><a href="Artefacts/Reserach_Methods_and_Professional_Practice/Worksheets/Exe 8.3D.pdf">PDF</a></b><nobr>, </nobr>
+											<b><a href="Artefacts/Reserach_Methods_and_Professional_Practice/Worksheets/Exe 8.3D.xlsx">XLSX</a></b>
 															<p> </p>
 										</details>
 											
@@ -277,12 +274,20 @@
 																<section id="eleven">
 									<div class="inner">
 										<header class="major">
-											<h2>Data Analysis Worksheets</h2>
+											<h2>Summary Measures and Hypothesis Testing</h2>
 										</header>
 										<details>
                       <summary>Exercises for analysing research data using spreadsheet programs.</summary>
 												<p> </p>
-												<b><a href="Artefacts/Reserach_Methods_and_Professional_Practice/Literature Review_Michael Geiger.pdf"></a></b>
+												<b>Percentage frequency bar chart: <b><a href="Artefacts/Reserach_Methods_and_Professional_Practice/Worksheets/Exe 9.1D.pdf">PDF</a></b><nobr>, </nobr>
+											<b><a href="Artefacts/Reserach_Methods_and_Professional_Practice/Worksheets/Exe 9.1D.xlsx">XLSX</a></b>
+															<p> </p>
+													<b>Percentage frequency clustered column bar chart: <b><a href="Artefacts/Reserach_Methods_and_Professional_Practice/Worksheets/Exe 9.2E.pdf">PDF</a></b><nobr>, </nobr>
+											<b><a href="Artefacts/Reserach_Methods_and_Professional_Practice/Worksheets/Exe 9.2E.xlsx">XLSX</a></b>
+															<p> </p>
+														<b>Relative frequency histogram: <b><a href="Artefacts/Reserach_Methods_and_Professional_Practice/Worksheets/Exe 9.3B.pdf">PDF</a></b><nobr>, </nobr>
+											<b><a href="Artefacts/Reserach_Methods_and_Professional_Practice/Worksheets/Exe 9.3B.xlsx">XLSX</a></b>
+															<p> </p>
 										</details>
 											
 											<p> </p>
