--- a/9.1Artefacts.html
+++ b/9.1Artefacts.html
@@ -240,6 +240,8 @@
 											<p> </p>
 												<b><a href="Artefacts/Reserach_Methods_and_Professional_Practice/Collaborative Discussion_2/Received Response_Ying Chan.pdf">Received Response 1</a></b>
 											<p> </p>
+											<b><a href="Artefacts/Reserach_Methods_and_Professional_Practice/Collaborative Discussion_2/Received Response_Gurkan Huray.pdf">Received Response 2</a></b>
+											<p> </p>
 											<b><a href="Artefacts/Reserach_Methods_and_Professional_Practice/Collaborative Discussion_2/Summary Post_Michael Geiger.pdf">Summary Post</a></b>
 										</details>
 											
