--- a/9.2Reflections.html
+++ b/9.2Reflections.html
@@ -172,21 +172,28 @@
                     
                     	<details>
 											<summary><b>Unit 7</b></summary>
-                        <p>Work in Progress</p>
+                        <p>The subject of this unit was the dimensions of validity, generalisability and reliability of quantitative and qualitative research methods. These aspects are of fundamental importance in order to produce meaningful as well as verifiable and consistent results in the research work and thus to be able to make a scientifically appropriate contribution to research.</p>
+<p>While in the context of quantitative research, validity, generalisability and reliability are dimensions that can be ensured and verified through statistical evaluations in a transparent and easily comprehensible manner, qualitative research is subject to the risk of bias and inappropriate data collection methods or evaluation methods of presenting or evaluating the research results in a distorted form (Kaplan & Maxwell, 2005).</p>
+<p>As a result, an appropriate methodology and reflected application of this is necessary, especially with regard to qualitative research methods, in order to meet the demands of scientific work. Since in the field of cyber security, in addition to quantitative research, qualitative research also plays an important role in order to be able to research processes and backgrounds in depth, well thought-out and considered choices of methods as well as a stringent and transparent evaluation are fundamental prerequisites for successful qualitative research work. A good approach for this can be found in the Qualitative Legitimation Model, which should be taken into account when choosing the research design and the choice of methods (Onwuegbuzie & Leech, 2007).</p>
+
                         <b>References:</b>
 												<ul>
-                          <li></li>
-                        </ul>
+                          <li>Kaplan, B. & Maxwell, J. A. (2005) Qualitative Research Methods for Evaluating  Computer Information Systems: New York, Springer. Available from: https://ebookcentral-proquest-com.uniessexlib.idm.oclc.org/lib/universityofessex-ebooks/reader.action?docID=264813&ppg=26 [Accessed 14 January 2023].</li>
+          						    <li>Onwuegbuzie, A. J. & Leech, N. L. (2007) Validity and qualitative research: An oxymoron?. Quality & quantity 41(2): 233-249. Available from: https://link.springer.com/article/10.1007/s11135-006-9000-3 [Accessed 14 January 2023].</li>          
+												</ul>
 												<p> </p><br>
 										</details>
 										<p> </p>
                     
                     	<details>
 											<summary><b>Unit 8</b></summary>
-                        <p>Work in Progress</p>
+                        <p>Following the last unit, statistical inference, the evaluation of quantitative research methods, was discussed in this unit. Basic statistical parameters and variables were analysed, which can be examined in a quantitative evaluation in order to be able to develop meaningful and valid results.</p>
+<p>Refreshing my knowledge of statistical analysis methods made sense for me, as it brought back my prior knowledge of quantitative research evaluation. I was reminded of the scientific approach of Poppers' philosophy of science, which forms a central part of scientific work and the understanding of the construction of research. Popper's approach to falsifiability as a fundamental part of the philosophy of science states that a theory has scientific value only if it can be refuted in principle (Popper, 1989). This basic idea forms the construct on which scientific work should be based, since this is the only way to conduct research and experiments that are comparable and investigable.</p>
+<p>Furthermore, the tasks in this unit for the exemplary evaluation of quantitative studies using Excel or the equivalent of Libre Office were helpful for me, since I had not previously carried out the statistical studies digitally and were therefore not familiar with the versatile functions of the spreadsheet programs. It was enlightening for me to see how intuitively usable the Libre Office spreadsheet program in particular is and how this not only speeds up the evaluation, but also makes it easier. Thus, these tasks have helped to expand my skills in terms of my analytical ability.</p>
+
                         <b>References:</b>
 												<ul>
-                          <li></li>
+                          <li>Popper, K. R. (1989) Logik der Forschung. Available from: https://api.pageplace.de/preview/DT0400.9783050050188_A21834005/preview-9783050050188_A21834005.pdf [Accessed 16 January 2023].</li>
                         </ul>
 												<p> </p><br>
 										</details>
