--- a/9.3Notes.html
+++ b/9.3Notes.html
@@ -89,8 +89,7 @@
 											<p> </p>
                     
                     <b>Seminar 4 - Inferential Statisitcs Workshop</b>
- 										<a href="Notes/">Notes</a><nobr> and </nobr>
-                    <a href="Notes/">Preparation</a>
+ 										<a href="Notes/Research_Methods_and_Professional_Practice/3_Seminar.pdf">Notes</a>
 											<p> </p>
 									
                     <b>Seminar 5 - Workshop on Presenting Results</b>
