--- a/9.3Notes.html
+++ b/9.3Notes.html
@@ -122,6 +122,9 @@
 											<b>	<a href="Notes/Research_Methods_and_Professional_Practice/Feedback - E-portfolio Unit 6.pdf">E-portfolio Unit 6</a> </b>
 											<p> </p>
 											<p> </p>
+											<b>	<a href="Notes/Research_Methods_and_Professional_Practice/Feedback - Literature Review.pdf">Literature Review</a> </b>
+											<p> </p>
+											<p> </p>
 											<b>	<a href="Notes/Research_Methods_and_Professional_Practice/Feedback - Collaborative Discussion 2.pdf">Collaborative Discussion 2</a> </b>
 											<p> </p>
 											<p> </p>
