--- a/9.4Skillmatrix.html
+++ b/9.4Skillmatrix.html
@@ -77,8 +77,8 @@
 										</header>
 										<p>
 											<b>
-												<a href="Skillmatrix/">Personal Skill Matrix</a><nobr> and </nobr>
-												<a href="Skillmatrix/">Action Plan</a>
+												<a href="Skillmatrix/Skillmatrix_RMPP.pdf">Personal Skill Matrix</a></b><nobr> and </nobr><b>
+												<a href="Skillmatrix/Action Plan_RMPP.pdf">Action Plan</a>
 										</b>
 									
                     <p>In the Research Methods and Professional Practice module, ethical, social, legal, professional and cultural issues relating to academic and professional computing professionals were discussed and the resulting consequences for the own actions and procedures were developed. On this basis, principles of academic research were examined and applied on existing regulations as well as on own personal ethical development. Furthermore, the skills of critical literature research and analysis were trained. Knowledge of research designs and methodologies was gained and skills to evaluate and design them according to research topics were developed. Based on this learning process, it was possible to create a research proposal for a selected topic and thus to improve the competence of structured and critical development of a research topic. Qualitative and quantitative data analysis methods were also learned with the help of spreadsheet programs and critical evaluations were rehearsed using these examples. Based on the diverse knowledge and skills gained, there are a large number of subject areas that must be further trained in the further course in order to be able to guarantee the own ongoing personal development. The Capstone project offers many opportunities to consolidate and further expand the skills and competences learned in relation to scientific work, structured and goal-oriented procedures, as well as ethically responsible behaviour and validatable scientific knowledge.</p>
