--- a/5.4Skillmatrix.html
+++ b/5.4Skillmatrix.html
@@ -59,7 +59,7 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<h1>Skillmatrix</h1>
+										<h1>Skills Matrix and Action Plan</h1>
 									</header>
 											
 									  
