--- a/2.4Skillmatrix.html
+++ b/2.4Skillmatrix.html
@@ -57,7 +57,7 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<h1>Skillmatrix</h1>
+										<h1>Skills Matrix and Action Plan</h1>
 									</header>
 											
 									<img src="Skillmatrix/Skill_Launching_Into_Cyber_Security.png" width="1200" height="600" align="left">  
