--- a/0.4Skillmatrix.html
+++ b/0.4Skillmatrix.html
@@ -57,7 +57,7 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<h1>Skillmatrix</h1>
+										<h1>Skills Matrix and Action Plan</h1>
 									</header>
 											
 						<!--			<img src="" width="1200" height="600" align="left">  
