--- a/9.1Artefacts.html
+++ b/9.1Artefacts.html
@@ -337,10 +337,10 @@
 																<section id="fourteen">
 									<div class="inner">
 										<header class="major">
-											<h2>Summary Measures and Hypothesis Testing</h2>
+											<h2>Summary Charts Worksheet and Analysis</h2>
 										</header>
 										<details>
-                      <summary>Exercises for analysing research data using spreadsheet programs.</summary>
+                      <summary>Exercise for creating and analysing worksheets.</summary>
 												<p> </p>
 												<b>Percentage frequency bar chart: </b><a href="Artefacts/Reserach_Methods_and_Professional_Practice/Worksheets/Exe 9.1D.pdf">PDF</a><nobr>, </nobr>
 											<a href="Artefacts/Reserach_Methods_and_Professional_Practice/Worksheets/Exe 9.1D.xlsx">XLSX</a>
