--- a/9.1Artefacts.html
+++ b/9.1Artefacts.html
@@ -209,7 +209,7 @@
 											<h2>Wiki Activity: Questionnaires</h2>
 										</header>
 										<details>
-                      <summary>As part of this exercise, a questionnaire was selected which was examined and criticized in terms of quality. Suggestions for improvement were developed in order to train personal skills in the context of developing questionnaires.</summary>
+                      <summary>As part of this exercise, a questionnaire was selected which was examined and criticised in terms of quality. Suggestions for improvement were developed in order to train personal skills in the context of developing questionnaires.</summary>
 												<p> </p>
 												<b><a href="Artefacts/Reserach_Methods_and_Professional_Practice/Unit 6_Wiki activity - Questionnaires.pdf">Wiki Activity: Questionnaires</a></b>
 										</details>
