--- a/9.3Notes.html
+++ b/9.3Notes.html
@@ -131,7 +131,7 @@
 											<b>	<a href="Notes/Research_Methods_and_Professional_Practice/Feedback - Reserach Proposal Outline.pdf">Research Proposal Outline</a> </b>
 											<p> <br>
 											<p> </p>
-											<b>	<a href="Notes/Research_Methods_and_Professional_Practice/Feedback - Statistical Worksheet.pdf">Statistical worksheet</a> </b>
+											<b>	<a href="Notes/Research_Methods_and_Professional_Practice/Feedback - Statistical Worksheet.pdf">Statistical worksheets</a> </b>
 											<p> <br>
 											<p> </p>
 											<b>	<a href="Notes/Research_Methods_and_Professional_Practice/Feedback - Research Proposal Presentation.pdf">Research Proposal Presentation</a> </b>
