--- a/9.1Artefacts.html
+++ b/9.1Artefacts.html
@@ -133,7 +133,7 @@
 											<section id="four">
 									<div class="inner">
 										<header class="major">
-											<h2>E-Portfolio Activity: Literature Review and Research Proposal Outlines</h2>
+											<h2>E-Portfolio Activity: Literature Review and Data Collection</h2>
 										</header>
 										<details>
                       <summary>A first outline of the planned literature review and initial considerations for the research proposal were carried out.</summary>
@@ -275,7 +275,7 @@
 										<details>
                       <summary>The outline of the planned Research Proposal Presentation.</summary>
 												<p> </p>
-												<b><a href="Artefacts/Reserach_Methods_and_Professional_Practice/Research Proposal_Outline">Research Proposal Outline</a></b>
+												<b><a href="Artefacts/Reserach_Methods_and_Professional_Practice/Research Proposal_Outline.pdf">Research Proposal Outline</a></b>
 										</details>
 											
 											<p> <br>
