--- a/10Msccybersecurityproject.html
+++ b/10Msccybersecurityproject.html
@@ -64,7 +64,7 @@
 							</header>
 				
 							<div class="content">
-								<p>Work in progress</p>
+								<p>Does Matter overcome security issues of implemnted communication standards?</p>
 							</div>
 						</div>
 					</section>
@@ -88,10 +88,10 @@
 									</header>
 									<p>
 										<ul>
-										  <li><p>
-											<li><p>
-											<li><p>
-											<li>
+										  <li>Planning, execution and evalutation of a scientific project in the field of cyber security</li>
+											<li>In-depth knowledge of wireless communication standards</li>
+											<li>Theoretical and pracital ecperiences of hacking in relation to Buetooth and Wi-Fi</li>
+											<li>Critical understanding of problems and approaches to solving interoperbility challenges</li>
 									</ul>
 </p>
 								</div>
