--- a/10Msccybersecurityproject.html
+++ b/10Msccybersecurityproject.html
@@ -140,7 +140,7 @@
 											<header class="major">
 												<h3>Meeting Notes</h3>
 											</header>
-											<p>Notes from various meetings, as well as feedback from team members and tutors.</p>
+											<p>Notes from various meetings, as well as feedback from supervisors.</p>
 											<ul class="actions">
 												<li><a href="10.3Notes.html" class="button">Learn more</a></li>
 											</ul>
