--- a/10Msccybersecurityproject.html
+++ b/10Msccybersecurityproject.html
@@ -108,7 +108,7 @@
 											<header class="major">
 												<h3>Artefacts</h3>
 											</header>
-											<p>These are the projects carried out to meet those learning outcomes, which are described above.</p>
+											<p>Parts of the Capstone Project as well as more information about the tests performed in the project can be found here.</p>
 											<ul class="actions">
 												<li><a href="10.1Artefacts.html" class="button">Learn more</a></li>
 											</ul>
