--- a/10.3Notes.html
+++ b/10.3Notes.html
@@ -87,7 +87,8 @@
 													<li>Discussion of the further project development process</li>
 													<li>Agreement of the next meeting</li>
 												</ol></p>
-												<p>Meeting Notes:<br>
+												<p>Meeting Notes:<br></p>
+												<p>
 												1. 
 												<ul>
 													<li>A first literature review was carried out.</li>
