--- a/10.3Notes.html
+++ b/10.3Notes.html
@@ -89,7 +89,8 @@
 												</ol></p>
 												<p>Meeting Notes:</p>
 												<p>
-												1.<ul>
+												<nobr>1.</nobr>
+												<ul>
 													<li>A first literature review was carried out.</li>
 													<li>There is a rough plan regarding the procedure.</li>
 												</ul><br>
