--- a/10.3Notes.html
+++ b/10.3Notes.html
@@ -131,7 +131,7 @@
 												<li>Discussion of the planned structure of the project</li>
 												<li>Finding and agreement of a suitable project heading</li>
 											</ol></p>
-											<p>Meeting Notes:
+											<p>Meeting Notes:<br>
 											1.
 												<ul>
 													<li>The first draft of the research proposal is generally fine, with only minor changes that need to be made.</li>
