--- a/10.3Notes.html
+++ b/10.3Notes.html
@@ -102,20 +102,23 @@
 													<li>There should be less focus on communication protocols that have been established for a long time.</li>
 													
 												</ul><br></p>
+												<p>
 												3.
 												<ul>
 													<li>It should be a less focus on techniques that have already been studied and discussed.</li>
 													<li>Greater focus on the questions: What is Matter? What makes Matter special? How is Matter different from other Smart Home IoT standards/protocols? What benefits can be seen in Matter? What dangers/threats can be identified?</li>
-												</ul><br>
+												</ul><br></p>
+												<p>
 												4.
 												<ul>
 													<li>There is currently a lack of a reflected validation and verification process to justify how the goals in the project can be achieved, or how an appropriate evaluation process (hypothesis analysis) can be carried out.</li>
 													<li>An ethical discussion focusing on the responsibility of matter and possible consequences for users and society should be undertaken.</li>
 													<li>The creation of the research proposal is the next milestone. In addition to the formatives, which accompany the development process through feedback, another meeting is arranged before the deadline.</li>
-												</ul><br>
+												</ul><br></p>
+												<p>
 												5.
-												<ul><li>Next meeting: Wednesday 12.04.2023 at 1:15 pm (GMT)</li></ul>
-											</p>
+												<ul><li>Next meeting: Wednesday 12.04.2023 at 1:15 pm (GMT)</li>
+											</ul><br></p>
 											</details>
 											<p> </p>
 
